Paises Controller + Fix parada
